fixed the nights song

--- a/playlist.html
+++ b/playlist.html
@@ -98,7 +98,7 @@
                             <td>The Nights</td>
                             <td>Song made by Avicii</td>
                             <td>
-                                <audio src="Music//thenights.mp3s" controls type="mp3"></audio>
+                                <audio src="Music//thenights.mp3" controls type="mp3"></audio>
                             </td>
                         </tr>
                         <tr>
