changed image for upbeats section

--- a/playlist.html
+++ b/playlist.html
@@ -47,7 +47,7 @@
                 <div class="card mb-3 bg-secondary text-light m-auto" style="max-width: 540px;">
                     <div class="row g-0">
                         <div class="col-md-4">
-                            <img src="https://yt3.ggpht.com/67t6aOGA4aXyX7wrOwt5gwwGw8QC7xIelvK9MrR_cWjMa3rsbzhWT76zXk0pyvFtihYGXPBHhY1h=s576"
+                            <img src="https://th.bing.com/th/id/OIP.ciTXyVvM0nejgI3vmp7JjwHaHp?w=188&h=195&c=7&r=0&o=5&pid=1.7"
                                 class="img-fluid rounded-start" alt="...">
                         </div>
                         <div class="col-md-8">
@@ -98,11 +98,7 @@
                             <td>The Nights</td>
                             <td>Song made by Avicii</td>
                             <td>
-                                <audio src="Music//thenights.mp3" controls type="mp3"></audio>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>3</td>
+                                <audio src="Music/thenights.mp3" controls type="mp3"></audio>
                             <th scope="row"><img class="rounded-2"
                                     src="https://i.ytimg.com/vi/XIv_EW_hZ1o/hqdefault.jpg?sqp=-oaymwEbCKgBEF5IVfKriqkDDggBFQAAiEIYAXABwAEG&rs=AOn4CLDhFt7vzvj_SM0sh87lysza1ejp9Q"
                                     alt=""></th>
