--- a/playlist.html
+++ b/playlist.html
@@ -97,8 +97,13 @@
                                     alt=""></th>
                             <td>The Nights</td>
                             <td>Song made by Avicii</td>
-                            <td>
-                                <audio src="Music/thenights.mp3" controls type="mp3"></audio>
+                            <td><audio src="Music/thenights.mp3" controls type="mp3"></audio>
+                            </td>
+        	            <tr>
+
+                        </tr>
+                        <td>3</td>
+                            
                             <th scope="row"><img class="rounded-2"
                                     src="https://i.ytimg.com/vi/XIv_EW_hZ1o/hqdefault.jpg?sqp=-oaymwEbCKgBEF5IVfKriqkDDggBFQAAiEIYAXABwAEG&rs=AOn4CLDhFt7vzvj_SM0sh87lysza1ejp9Q"
                                     alt=""></th>
@@ -106,8 +111,6 @@
                             <td>Song made by Fasion</td>
                             <td>
                                 <audio src="Music//dansez.mp3" controls type="mp3"></audio>
-                            </td>
-
                         </tr>
                         <tr>
                             <td>4</td>
